--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,9 @@ Django==1.4.4
 distribute==0.6.31
 django-extensions==1.0.3
 ipython==0.13.1
+mock==1.0.1
+relaxml==0.1.3
+requests==1.1.0
+simplejson==3.0.8
+three==0.6.7
 wsgiref==0.1.2
