--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ Django==1.4.4
 distribute==0.6.31
 django-cors-headers==0.05
 django-extensions==1.0.3
+django-pylibmc-sasl==0.2.4
 ipython==0.13.1
 mock==1.0.1
+pylibmc==1.2.3
 relaxml==0.1.3
 requests==1.1.0
 simplejson==3.0.8
