--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ distribute==0.6.31
 django-cors-headers==0.05
 django-extensions==1.0.3
 django-pylibmc-sasl==0.2.4
+gevent==0.13.8
+greenlet==0.4.0
+gunicorn==0.17.2
 ipython==0.13.1
 mock==1.0.1
 pylibmc==1.2.3
